--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.2.1",
     "less": "^2.7.3",
     "normalize.css": "^7.0.0",
+    "v-distpicker": "^1.0.16",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
